--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "./mixin.scss";
 @import "./fonts.scss";
 @import "./global.scss";
+@import "./common.scss";
 @import "./buttons.scss";
 @import "./form.scss";
 @import "./list.scss";
