--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,1 +1,30 @@
 @charset "utf-8";
+
+.only-moblile {
+  display: none !important;
+}
+.only-moblile-flex {
+  display: none !important;
+}
+.only-desktop {
+  display: block !important;
+}
+.only-desktop-flex {
+  display: flex !important;
+}
+
+// 모바일 화면 기준이 정해지면 max-width: 767.98px 수정/보완할 것
+@media (max-width: 767.98px) {
+  .only-moblile {
+    display: block !important;
+  }
+  .only-moblile-flex {
+    display: flex !important;
+  }
+  .only-desktop {
+    display: none !important;
+  }
+  .only-desktop-flex {
+    display: none !important;
+  }
+}
